@@ -7,6 +7,7 @@ Version 0.4.0~dev
 	* Add 'edit workflow' feature.
 	* Add 'rename item' feature.
 	* Add 'delete item' feature.
+	* Add 'delete category' feature.
 
 Version 0.3.2 Released on 2011/07/27
 
